# fastapi-agh

./: .gitignore  devenv.nix  pyproject.toml
backend/: main.py  models.py  schema.py
backend/alembic/: env.py
backend/alembic/versions/: 9b35fa22c7a7_.py  9b9049b63bfc_.py  cd33902ed91c_.py
frontend/: package-lock.json  package.json
frontend/src/components/: user.tsx
frontend/src/pages/: _app.tsx  index.tsx
